--- a/index.html
+++ b/index.html
@@ -1,24 +1,127 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Workspace Testing</title>
-</head>
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+
+
+    <!-- CSS -->
+    <link href="styles/main.css" rel="stylesheet" />
+
+    <!-- Title -->
+    <title>Title</title>
+
+
+</head>
 <body>
     <header>
-        <h1>Workspace Testing</h1>
+        <h1>Page Title</h1>
     </header>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitasse platea dictumst quisque sagittis. Cursus sit amet dictum sit amet justo donec. Vitae justo eget magna fermentum iaculis eu non. Sed risus ultricies tristique nulla aliquet enim tortor at auctor. Ultrices dui sapien eget mi proin sed libero. Nisl rhoncus mattis rhoncus urna neque viverra justo. Aliquet nibh praesent tristique magna sit. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Leo duis ut diam quam nulla porttitor massa id. Velit laoreet id donec ultrices.
-    </p>
-    <p>
-        Ornare quam viverra orci sagittis eu volutpat odio facilisis mauris. Donec ac odio tempor orci. Nam libero justo laoreet sit amet cursus sit amet dictum. Tortor consequat id porta nibh. Enim praesent elementum facilisis leo vel fringilla. Habitant morbi tristique senectus et. Facilisis leo vel fringilla est. Aliquet risus feugiat in ante. Nibh praesent tristique magna sit amet purus. Phasellus vestibulum lorem sed risus. Nibh tellus molestie nunc non blandit massa enim nec dui. Quam id leo in vitae turpis massa sed elementum tempus. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Adipiscing enim eu turpis egestas pretium aenean pharetra magna. Ac auctor augue mauris augue neque gravida in.
-    </p>
-    <p>
-        Risus pretium quam vulputate dignissim suspendisse. Et ultrices neque ornare aenean euismod elementum. Purus ut faucibus pulvinar elementum integer. Purus sit amet volutpat consequat. Congue quisque egestas diam in arcu cursus euismod quis. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Orci eu lobortis elementum nibh tellus molestie nunc non blandit. Scelerisque in dictum non consectetur a erat. Lacus sed viverra tellus in hac. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Ac placerat vestibulum lectus mauris ultrices. Bibendum ut tristique et egestas quis ipsum suspendisse ultrices gravida. Malesuada proin libero nunc consequat interdum. Mattis molestie a iaculis at erat. Odio tempor orci dapibus ultrices in iaculis. Turpis in eu mi bibendum neque egestas congue quisque egestas.
-    </p>
-</body>
+    <nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/resume/index.html">Resume</a></li>
+            <li><a href="/project/index.html">Project</a></li>
+            <li><a href="/contact/index.html">Contact</a></li>
 
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <header>
+                <h1>Article #1</h1>
+            </header>
+            <section>
+                This is the first article.
+            </section>
+        </article>
+        <article>
+            <header>
+                <h1>Article #2</h1>
+            </header>
+            <section>
+                This is the second article.
+            </section>
+        </article>
+    </section>
+    <aside>
+        <section>
+            <h1>Links</h1>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+            </ul>
+        </section>
+        <figure>
+            <img width="85" height="85" 
+                src="http://domain.tld/path/to/image.jpg" 
+                alt="foobar" />
+            <figcaption>Foobar</figcaption>
+        </figure>
+    </aside>
+    <footer class="container-fluid">
+        <div id="linear-navi">
+            <ul>
+                <li><a href="#">Previous</a></li>
+                <li># / 4</li>
+                <li><a href="#">Next</a></li>
+            </ul>
+        </div> <!-- linear-navi -->
+        <section>
+            <div id="footer-sitemap" class="container">
+                <ul class="row ">
+                    <li class="footer-sitemap-hdr col-3" >Home
+                        <ul>
+                            <li>Bio</li>
+                            <li>Passion</li>
+                            <li>Testimonials</li>
+                        </ul>
+                    </li>
+                    <li class="footer-sitemap-hdr col-3" >Resume
+                        <ul>
+                            <li>Objective</li>
+                            <li>Skills Summary</li>
+                            <li>Past Working Experience</li>
+                            <li>Education</li>
+                            <li>Skills</li>
+                            <li>Certificate and Projects</li>
+                        </ul>
+                    </li>
+                    <li class="footer-sitemap-hdr col-3" >Projects
+                        <ul>
+                            <li>Project #1</li>
+                            <li>Project #2</li>
+                            <li>Project #3</li>
+                            <li>Project #4</li>
+                        </ul>
+                    </li>
+                    <li class="footer-sitemap-hdr col-3" >Contact
+                        <ul>
+                            <li>Contact Form</li>
+                            <li>Contact Details</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div> <!-- footer-sitemap -->
+        </section>
+    </footer>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+</body>
 </html>
