Tidy up footer codings

--- a/index.html
+++ b/index.html
@@ -81,58 +81,54 @@
         </figure>
     </aside>
     <footer class="container-fluid">
-        <div id="linear-navi">
-            <ul>
-                <li><a href="#">Previous</a></li>
-                <li># / 4</li>
-                <li><a href="#">Next</a></li>
-            </ul>
-        </div> <!-- linear-navi -->
-        <section>
-            <div id="footer-sitemap" class="container">
-                <ul class="row ">
-                    <li class="col-12 col-sm-6 col-md-3" ><a href="/index.html">Home</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="/index.html#bio">Bio</a></li>
-                            <li><a href="/index.html#passion">Passion</a></li>
-                            <li><a href="/index.html#testimonials">Testimonials</a></li>
-                        </ul>
-                    </li>
-                    <li class=" col-12 col-sm-6 col-md-3" ><a href="/resume.html">Resume</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="/resume/index.html#objective">Objective</a></li>
-                            <li><a href="/resume/index.html#skills-summary">Skills Summary</a></li>
-                            <li><a href="/resume/index.html#past-working-experience">Past Working Experience</a></li>
-                            <li><a href="/resume/index.html#education">Education</a></li>
-                            <li><a href="/resume/index.html#skills">Skills</a></li>
-                            <li><a href="/resume/index.html#certificates-and-projects">Certificates and Projects</a></li>
-                        </ul>
-                    </li>
-                    <li class=" col-12 col-sm-6 col-md-3" ><a href="/portfolio.html">Portfolio</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="/portfolio/index.html#project1">Project #1</a></li>
-                            <li><a href="/portfolio/index.html#project2">Project #2</a></li>
-                            <li><a href="/portfolio/index.html#project3">Project #3</a></li>
-                            <li><a href="/portfolio/index.html#project4">Project #4</a></li>
-                        </ul>
-                    </li>
-                    <li class="col-12 col-sm-6 col-md-3" ><a href="/contact.html">Contact</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="/contact/index.html#contact-form">Contact Form</a></li>
-                            <li><a href="/contact/index.html#contact-details">Contact Details</a></li>
-                        </ul>
-                    </li>
+        <section id="linear-navi">
+                <ul>
+                    <li><a href="#">Previous</a></li>
+                    <li># / 4</li>
+                    <li><a href="#">Next</a></li>
                 </ul>
-            </div> <!-- footer-sitemap -->
+        </section>  <!-- linear-navi -->
+        <section id="footer-sitemap" class="container">
+            <ul class="row ">
+                <li class="col-12 col-sm-6 col-md-3" ><a href="/ index.html" class="sitemap-header">Home</a>
+                    <ul class="footer-sitemap-li">
+                        <li><a href="/index.html#bio">Bio</a></li>
+                        <li><a href="/index.html#passion">Passion</a></li>
+                        <li><a href="/index.html#testimonials">Testimonials</a></li>
+                    </ul>
+                </li>
+                <li class=" col-12 col-sm-6 col-md-3" ><a href="/resume.html" class="sitemap-header">Resume</a>
+                    <ul class="footer-sitemap-li">
+                        <li><a href="/resume/index.html#objective">Objective</a></li>
+                        <li><a href="/resume/index.html#skills-summary">Skills Summary</a></li>
+                        <li><a href="/resume/index.html#past-working-experience">Past Working Experience</a></li>
+                        <li><a href="/resume/index.html#education">Education</a></li>
+                        <li><a href="/resume/index.html#skills">Skills</a></li>
+                        <li><a href="/resume/index.html#certificates-and-projects">Certificates and Projects</a></li>
+                    </ul>
+                </li>
+                <li class=" col-12 col-sm-6 col-md-3" ><a href="/portfolio.html" class="sitemap-header" class="font-weight-bold">Portfolio</a>
+                    <ul class="footer-sitemap-li">
+                        <li><a href="/portfolio/index.html#project1">Project #1</a></li>
+                        <li><a href="/portfolio/index.html#project2">Project #2</a></li>
+                        <li><a href="/portfolio/index.html#project3">Project #3</a></li>
+                        <li><a href="/portfolio/index.html#project4">Project #4</a></li>
+                    </ul>
+                </li>
+                <li class="col-12 col-sm-6 col-md-3" ><a href="/contact.html" class="sitemap-header">Contact</a>
+                    <ul class="footer-sitemap-li">
+                        <li><a href="/contact/index.html#contact-form">Contact Form</a></li>
+                        <li><a href="/contact/index.html#contact-details">Contact Details</a></li>
+                    </ul>
+                </li>
+            </ul>
+            &nbsp;
         </section>
     </footer>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
 </body>
 </html>
