--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <!-- Required meta tags -->
@@ -15,6 +16,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome 4-->
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 
     <!-- CSS -->
     <link href="styles/main.css" rel="stylesheet" />
@@ -24,6 +27,7 @@
 
 
 </head>
+
 <body>
     <header>
         <h1>Page Title</h1>
@@ -48,16 +52,28 @@
         </article>
         <article>
             <header>
-                <h1>Article #2</h1> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fusce id velit ut tortor pretium viverra suspendisse. Proin sagittis nisl rhoncus mattis rhoncus urna neque. Nunc sed augue lacus viverra. A iaculis at erat pellentesque adipiscing commodo elit. Pharetra vel turpis nunc eget lorem. Nunc lobortis mattis aliquam faucibus purus in massa. Nunc vel risus commodo viverra maecenas accumsan lacus. Ut diam quam nulla porttitor massa id neque. Senectus et netus et malesuada fames ac. Augue eget arcu dictum varius duis at. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Quis lectus nulla at volutpat diam ut venenatis. Dolor sit amet consectetur adipiscing. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.</p>
+                <h1>Article #2</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fusce id velit ut tortor pretium viverra suspendisse. Proin sagittis nisl rhoncus mattis rhoncus urna neque. Nunc
+                    sed augue lacus viverra. A iaculis at erat pellentesque adipiscing commodo elit. Pharetra vel turpis nunc eget lorem. Nunc lobortis mattis aliquam faucibus purus in massa. Nunc vel risus commodo viverra maecenas accumsan lacus. Ut
+                    diam quam nulla porttitor massa id neque. Senectus et netus et malesuada fames ac. Augue eget arcu dictum varius duis at. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Quis lectus nulla at volutpat diam ut venenatis. Dolor
+                    sit amet consectetur adipiscing. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.</p>
 
-                <p>Magna fermentum iaculis eu non diam phasellus vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. Egestas purus viverra accumsan in nisl nisi scelerisque eu. Diam sollicitudin tempor id eu. Facilisis leo vel fringilla est ullamcorper. Eros donec ac odio tempor orci dapibus ultrices in iaculis. In fermentum posuere urna nec tincidunt praesent. Et leo duis ut diam. Eu facilisis sed odio morbi. Lacinia quis vel eros donec ac. Porta nibh venenatis cras sed felis eget velit aliquet sagittis. Dui id ornare arcu odio ut sem. Posuere lorem ipsum dolor sit amet.</p>
+                <p>Magna fermentum iaculis eu non diam phasellus vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. Egestas purus viverra accumsan in nisl nisi scelerisque eu. Diam sollicitudin tempor id eu. Facilisis leo vel
+                    fringilla est ullamcorper. Eros donec ac odio tempor orci dapibus ultrices in iaculis. In fermentum posuere urna nec tincidunt praesent. Et leo duis ut diam. Eu facilisis sed odio morbi. Lacinia quis vel eros donec ac. Porta nibh venenatis
+                    cras sed felis eget velit aliquet sagittis. Dui id ornare arcu odio ut sem. Posuere lorem ipsum dolor sit amet.</p>
 
-                <p>Sed egestas egestas fringilla phasellus faucibus scelerisque. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Scelerisque in dictum non consectetur a. Neque convallis a cras semper auctor. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Proin sagittis nisl rhoncus mattis rhoncus urna. Lacus vestibulum sed arcu non. Pellentesque nec nam aliquam sem et tortor consequat. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Id diam maecenas ultricies mi. Arcu odio ut sem nulla pharetra. Luctus venenatis lectus magna fringilla urna. At in tellus integer feugiat.</p>
+                <p>Sed egestas egestas fringilla phasellus faucibus scelerisque. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Scelerisque in dictum non consectetur a. Neque convallis
+                    a cras semper auctor. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Proin sagittis nisl rhoncus mattis rhoncus urna. Lacus vestibulum sed arcu non. Pellentesque nec nam aliquam sem et tortor consequat. Maecenas accumsan
+                    lacus vel facilisis volutpat est velit egestas. Id diam maecenas ultricies mi. Arcu odio ut sem nulla pharetra. Luctus venenatis lectus magna fringilla urna. At in tellus integer feugiat.</p>
 
-                <p>Nulla posuere sollicitudin aliquam ultrices sagittis. Tincidunt praesent semper feugiat nibh. Risus feugiat in ante metus dictum at tempor. Pellentesque nec nam aliquam sem et tortor. Nibh sed pulvinar proin gravida hendrerit. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu. Tempus quam pellentesque nec nam. Enim ut sem viverra aliquet eget sit amet. Cursus turpis massa tincidunt dui ut ornare lectus sit amet. Congue mauris rhoncus aenean vel elit scelerisque. Diam sit amet nisl suscipit adipiscing bibendum. Vitae congue mauris rhoncus aenean vel elit scelerisque. Adipiscing diam donec adipiscing tristique. Turpis in eu mi bibendum. In fermentum et sollicitudin ac orci phasellus. Lorem sed risus ultricies tristique nulla. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae.</p>
+                <p>Nulla posuere sollicitudin aliquam ultrices sagittis. Tincidunt praesent semper feugiat nibh. Risus feugiat in ante metus dictum at tempor. Pellentesque nec nam aliquam sem et tortor. Nibh sed pulvinar proin gravida hendrerit. Ac orci
+                    phasellus egestas tellus rutrum tellus pellentesque eu. Tempus quam pellentesque nec nam. Enim ut sem viverra aliquet eget sit amet. Cursus turpis massa tincidunt dui ut ornare lectus sit amet. Congue mauris rhoncus aenean vel elit
+                    scelerisque. Diam sit amet nisl suscipit adipiscing bibendum. Vitae congue mauris rhoncus aenean vel elit scelerisque. Adipiscing diam donec adipiscing tristique. Turpis in eu mi bibendum. In fermentum et sollicitudin ac orci phasellus.
+                    Lorem sed risus ultricies tristique nulla. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae.</p>
 
-                <p>Aenean pharetra magna ac placerat vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis. Dui ut ornare lectus sit amet. Nulla posuere sollicitudin aliquam ultrices. Neque gravida in fermentum et. Ultricies tristique nulla aliquet enim. Sit amet tellus cras adipiscing enim eu. Sem fringilla ut morbi tincidunt augue interdum velit euismod. Et netus et malesuada fames ac turpis egestas. Fringilla est ullamcorper eget nulla facilisi etiam.</p>
+                <p>Aenean pharetra magna ac placerat vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis.
+                    Dui ut ornare lectus sit amet. Nulla posuere sollicitudin aliquam ultrices. Neque gravida in fermentum et. Ultricies tristique nulla aliquet enim. Sit amet tellus cras adipiscing enim eu. Sem fringilla ut morbi tincidunt augue interdum
+                    velit euismod. Et netus et malesuada fames ac turpis egestas. Fringilla est ullamcorper eget nulla facilisi etiam.</p>
 
             </header>
             <section>
@@ -74,30 +90,33 @@
             </ul>
         </section>
         <figure>
-            <img width="85" height="85" 
-                src="http://domain.tld/path/to/image.jpg" 
-                alt="foobar" />
+            <img width="85" height="85" src="http://domain.tld/path/to/image.jpg" alt="foobar" />
             <figcaption>Foobar</figcaption>
         </figure>
     </aside>
     <footer class="container-fluid">
-        <section id="linear-navi">
-                <ul>
-                    <li><a href="#">Previous</a></li>
-                    <li># / 4</li>
-                    <li><a href="#">Next</a></li>
-                </ul>
-        </section>  <!-- linear-navi -->
+        <section class="d-flex flex-row justify-content-center align-content-center align-item-center flex-nowrap">
+
+            <div class="p-2">Flex item 1</div>
+            <div class="p-2">Flex item 2</div>
+            <div class="p-2">Flex item 3</div>
+            <div class="p-2">Flex item 4</div>
+
+
+        </section> <!-- linear-navi -->
+        
+        
         <section id="footer-sitemap" class="container">
             <ul class="row ">
-                <li class="col-12 col-sm-6 col-md-3" ><a href="/ index.html" class="sitemap-header">Home</a>
+                <li class="col-12 col-sm-6 col-md-3"><a href="idex.html:"
+                 class="sitemap-header">Home</a> 
                     <ul class="footer-sitemap-li">
                         <li><a href="/index.html#bio">Bio</a></li>
                         <li><a href="/index.html#passion">Passion</a></li>
                         <li><a href="/index.html#testimonials">Testimonials</a></li>
                     </ul>
                 </li>
-                <li class=" col-12 col-sm-6 col-md-3" ><a href="/resume.html" class="sitemap-header">Resume</a>
+                <li class=" col-12 col-sm-6 col-md-3"><a href="/resume.html" class="sitemap-header">Resume</a>
                     <ul class="footer-sitemap-li">
                         <li><a href="/resume/index.html#objective">Objective</a></li>
                         <li><a href="/resume/index.html#skills-summary">Skills Summary</a></li>
@@ -107,7 +126,7 @@
                         <li><a href="/resume/index.html#certificates-and-projects">Certificates and Projects</a></li>
                     </ul>
                 </li>
-                <li class=" col-12 col-sm-6 col-md-3" ><a href="/portfolio.html" class="sitemap-header" class="font-weight-bold">Portfolio</a>
+                <li class=" col-12 col-sm-6 col-md-3"><a href="/portfolio.html" class="sitemap-header" class="font-weight-bold">Portfolio</a>
                     <ul class="footer-sitemap-li">
                         <li><a href="/portfolio/index.html#project1">Project #1</a></li>
                         <li><a href="/portfolio/index.html#project2">Project #2</a></li>
@@ -115,7 +134,7 @@
                         <li><a href="/portfolio/index.html#project4">Project #4</a></li>
                     </ul>
                 </li>
-                <li class="col-12 col-sm-6 col-md-3" ><a href="/contact.html" class="sitemap-header">Contact</a>
+                <li class="col-12 col-sm-6 col-md-3"><a href="/contact.html" class="sitemap-header">Contact</a>
                     <ul class="footer-sitemap-li">
                         <li><a href="/contact/index.html#contact-form">Contact Form</a></li>
                         <li><a href="/contact/index.html#contact-details">Contact Details</a></li>
@@ -131,4 +150,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
