--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
 
     </header>
 
-    <section>
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>I am Donovan</h1>
-                <p>And I'm a Software Developoer</p>
-                <button>Hire me</button>
-            </div>
-        </div>
+    <section class="jumbotron jumbotron-fluid">
+
+  <div class="hero-text">
+    <h1>I am Donovan</h1>
+    <p>And I'm a Software Developoer</p>
+    <button type="button" class="btn btn-primary">Hire Me</button>
+  </div>
+       
+  
+
     </section>
     <section>
         <article>
