Add placeholders for home page
Add text placeholder for Intro/Bio section
Add text placeholder for Passion section
Add Bootstrap card deck components for Testimonial section
Style cards with Classy Blockquote styling

--- a/index.html
+++ b/index.html
@@ -60,68 +60,86 @@
 
     <section class="jumbotron jumbotron-fluid">
 
-  <div class="hero-text">
-    <h1>I am Donovan</h1>
-    <p>And I'm a Software Developoer</p>
-    <button type="button" class="btn btn-primary">Hire Me</button>
-  </div>
-       
-  
+        <div class="hero-text">
+            <h1>I am Donovan</h1>
+            <p>And I'm a Software Developoer</p>
+            <button type="button" class="btn btn-primary">Hire Me</button>
+        </div>
 
     </section>
-    <section>
+
+    <main>
         <article>
-            <header>
-                <h1>Article #1</h1>
-            </header>
-            <section>
-                This is the first article.
-            </section>
+            <h1>Intro / Bio </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </article>
+        <artlcle>
+            <h1>Passion</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
         <article>
-            <header>
-                <h1>Article #2</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fusce id velit ut tortor pretium viverra suspendisse. Proin sagittis nisl rhoncus mattis rhoncus urna neque. Nunc
-                    sed augue lacus viverra. A iaculis at erat pellentesque adipiscing commodo elit. Pharetra vel turpis nunc eget lorem. Nunc lobortis mattis aliquam faucibus purus in massa. Nunc vel risus commodo viverra maecenas accumsan lacus. Ut
-                    diam quam nulla porttitor massa id neque. Senectus et netus et malesuada fames ac. Augue eget arcu dictum varius duis at. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Quis lectus nulla at volutpat diam ut venenatis. Dolor
-                    sit amet consectetur adipiscing. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.</p>
+            <h1>Testimonials</h1>
 
-                <p>Magna fermentum iaculis eu non diam phasellus vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. Egestas purus viverra accumsan in nisl nisi scelerisque eu. Diam sollicitudin tempor id eu. Facilisis leo vel
-                    fringilla est ullamcorper. Eros donec ac odio tempor orci dapibus ultrices in iaculis. In fermentum posuere urna nec tincidunt praesent. Et leo duis ut diam. Eu facilisis sed odio morbi. Lacinia quis vel eros donec ac. Porta nibh venenatis
-                    cras sed felis eget velit aliquet sagittis. Dui id ornare arcu odio ut sem. Posuere lorem ipsum dolor sit amet.</p>
+                <div class="card-deck">
+                <div class="card">
 
-                <p>Sed egestas egestas fringilla phasellus faucibus scelerisque. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Scelerisque in dictum non consectetur a. Neque convallis
-                    a cras semper auctor. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Proin sagittis nisl rhoncus mattis rhoncus urna. Lacus vestibulum sed arcu non. Pellentesque nec nam aliquam sem et tortor consequat. Maecenas accumsan
-                    lacus vel facilisis volutpat est velit egestas. Id diam maecenas ultricies mi. Arcu odio ut sem nulla pharetra. Luctus venenatis lectus magna fringilla urna. At in tellus integer feugiat.</p>
 
-                <p>Nulla posuere sollicitudin aliquam ultrices sagittis. Tincidunt praesent semper feugiat nibh. Risus feugiat in ante metus dictum at tempor. Pellentesque nec nam aliquam sem et tortor. Nibh sed pulvinar proin gravida hendrerit. Ac orci
-                    phasellus egestas tellus rutrum tellus pellentesque eu. Tempus quam pellentesque nec nam. Enim ut sem viverra aliquet eget sit amet. Cursus turpis massa tincidunt dui ut ornare lectus sit amet. Congue mauris rhoncus aenean vel elit
-                    scelerisque. Diam sit amet nisl suscipit adipiscing bibendum. Vitae congue mauris rhoncus aenean vel elit scelerisque. Adipiscing diam donec adipiscing tristique. Turpis in eu mi bibendum. In fermentum et sollicitudin ac orci phasellus.
-                    Lorem sed risus ultricies tristique nulla. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae.</p>
 
-                <p>Aenean pharetra magna ac placerat vestibulum. Cursus eget nunc scelerisque viverra mauris in aliquam. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis.
-                    Dui ut ornare lectus sit amet. Nulla posuere sollicitudin aliquam ultrices. Neque gravida in fermentum et. Ultricies tristique nulla aliquet enim. Sit amet tellus cras adipiscing enim eu. Sem fringilla ut morbi tincidunt augue interdum
-                    velit euismod. Et netus et malesuada fames ac turpis egestas. Fringilla est ullamcorper eget nulla facilisi etiam.</p>
+                    <div class="testimonial-quote ">
+                        <img src="http://placehold.it/120x120">
+                        <div class="quote-container">
+                            <blockquote>
+                                <p>Overall, fantastic! I'd recommend them to anyone looking for a creative, thoughtful, and professional team.”</p>
+                            </blockquote>  
+                            <cite><span>Kristi Bruno</span><br>
+                                Social Media Specialist<br>
+                                American College of Chest Physicians
+                            </cite>
+                        </div>
+                    </div>    
 
-            </header>
-            <section>
-                This is the second article.
-            </section>
+
+
+                </div>
+                <div class="card">
+                    <div class="testimonial-quote ">
+                        <img src="http://placehold.it/120x120">
+                        <div class="quote-container">
+                            <blockquote>
+                                <p>Overall, fantastic! I'd recommend them to anyone looking for a creative, thoughtful, and professional team.”</p>
+                            </blockquote>  
+                            <cite><span>Kristi Bruno</span><br>
+                                Social Media Specialist<br>
+                                American College of Chest Physicians
+                            </cite>
+                        </div>
+                    </div>    
+                </div>
+                <div class="card">
+                    <div class="testimonial-quote ">
+                        <img src="http://placehold.it/120x120">
+                        <div class="quote-container">
+                            <blockquote>
+                                <p>Overall, fantastic! I'd recommend them to anyone looking for a creative, thoughtful, and professional team.”</p>
+                            </blockquote>  
+                            <cite><span>Kristi Bruno</span><br>
+                                Social Media Specialist<br>
+                                American College of Chest Physicians
+                            </cite>
+                        </div>
+                    </div>    
+                </div>
+                </div>
+
+           
+
         </article>
-    </section>
-    <aside>
-        <section>
-            <h1>Links</h1>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </section>
-        <figure>
-            <img width="85" height="85" src="http://domain.tld/path/to/image.jpg" alt="foobar" />
-            <figcaption>Foobar</figcaption>
-        </figure>
-    </aside>
+    </main>
+
+
+
+
+
     <footer class="container-fluid">
         <section id="linear-navi" class="d-flex flex-row justify-content-center align-content-center align-item-center flex-nowrap">
             <a href="/index.html"  class="p-1"><i class="fa fa-circle-o dots" ria-hidden="true"></i></a>
