--- a/index.html
+++ b/index.html
@@ -137,6 +137,52 @@
     </main>
 
 
+    <main>
+        <section>
+        <article>
+            <div class="container-fluid">
+                <div class="row">
+                    <h1>Resume Objectives</h1>
+                </div>
+
+                <style>
+                    #test div {background-color: red; border:1px solid black}
+
+                </style>
+                <div class="row" id="test">
+
+                    <div class="col-12 col-sm-12 col-md-8 order-md-1">
+                        1
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-8 order-md-2">
+                        2
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 order-md-1">
+                        3
+                  </div>
+                    <div class="col-12 col-sm-6 col-md-4 order-md-2">
+                        4
+                    </div>
+
+  
+                </div>
+                <div class="row">
+                    <h1>Certificates and Projects</h1>
+                </div>
+                <div class-"row">
+                    <div class="col-1">
+                     icon
+                     </div>
+                     <div clas="col-2">
+                     Download
+                      </div>
+                </div>
+            </div>
+        </article>>
+
+        </section>
+
+    </maim>
 
 
 
