--- a/index.html
+++ b/index.html
@@ -178,34 +178,37 @@
                       </div>
                 </div>
             </div>
-        </article>>
+        </article>
 
         </section>
 
-    </maim>
+    </main>
 
 
 
-    <footer class="container-fluid">
-
-        <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="/index.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="/resume/index.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="/portfolio/index.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="/contact/index.html">4</a></li>
-            <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-            </li>
-        </ul>
-        </nav>
+    <footer class="container-fluid ">
+        <section id="linear-navigation justify-content-center" >
+            <nav aria-label="Page navigation">
+                
+                <ul class="pagination justify-content-center ">
+                    <li class="page-item disabled p-2">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                         </a>
+                     </li>
+                    <li class="page-item p-2 active"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item p-2 "><a class="page-link" href="#">2</a></li>
+                    <li class="page-item p-2"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item p-2"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item p-2">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+           
+            </nav>
+        </section>
 
         <section id="footer-sitemap" class="container">
             <ul class="row ">
