--- a/index.html
+++ b/index.html
@@ -184,6 +184,75 @@
 
     </main>
 
+    <main>
+        <section class="container">
+            <div class="row">
+
+                <div class="col-12 col-sm-6  col-md-4 col-lg-3 bg-primary">
+                    <div class="row">
+                        image
+                    </div>
+                    <div class="row">
+                        title
+                    </div>
+                    <div class="row">
+                        description
+                    </div>
+                    <div class="row">
+                        icon and link
+                    </div>
+                </div>
+                <div class="col-12  col-sm-6  col-md-4 col-lg-3 bg-secondary">
+                    <div class="row">
+                        image
+                    </div>
+                    <div class="row">
+                        title
+                    </div>
+                    <div class="row">
+                        description
+                    </div>
+                    <div class="row">
+                        icon and link
+                    </div>
+                </div>
+                <div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-success">
+                    <div class="row">
+                        image
+                    </div>
+                    <div class="row">
+                        title
+                    </div>
+                    <div class="row">
+                        description
+                    </div>
+                    <div class="row">
+                        icon and link
+                    </div>
+                </div>
+                <div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-danger">
+                    <div class="row">
+                        image
+                    </div>
+                    <div class="row">
+                        title
+                    </div>
+                    <div class="row">
+                        description
+                    </div>
+                    <div class="row">
+                        icon and link
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+   
+
+
+    </main>
+
 
 
     <footer class="container-fluid ">
