Added nav folder and images subfolder

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Homeadd Page -->
+<!-- Home Page -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,8 +32,6 @@
 
 <body>
     <header>
-
-    
 
     <nav class="navbar navbar-expand-md navbar-light sm-light">
         <a class="navbar-brand" href="#"><img src="images/noun_Designer_678225.svg" height="100px" width="100px"/></a>
