--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
 
     <nav class="navbar navbar-expand-md navbar-light sm-light">
-        <a class="navbar-brand" href="#"><img src="images/noun_Designer_678225.svg" height="100px" width="100px"/></a>
+        <a class="navbar-brand" href="#"><img src="/common/images/donovanlogo80x95.png" height="100px" width="100px"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,9 +48,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/portfolio/index.html">Project</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact/index.html">Contact</a>
                 </li>
             </ul>
         </div>
