--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
 
     <nav class="navbar navbar-expand-md navbar-light sm-light">
-        <a class="navbar-brand" href="#"><img src="/common/images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+        <a class="navbar-brand" href="#"><img src="/common/donovanlogo80x95.png" height="100px" width="100px"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,10 +44,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/resume/index.html">Features</a>
+                    <a class="nav-link" href="/resume/index.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio/index.html">Project</a>
+                    <a class="nav-link" href="/portfolio/index.html">Portfolio</a>
                 </li>
             </ul>
         </div>
