--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
 
     <nav class="navbar navbar-expand-md navbar-light sm-light">
-        <a class="navbar-brand" href="#"><img src="common/donovanlogo80x95.png" height="100px" width="100px"/></a>
+        <a class="navbar-brand" href="#"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,10 +44,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/resume/index.html">Resume</a>
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio/index.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </div>
@@ -280,35 +280,30 @@
             <ul class="row ">
                 <li class="col-12 col-sm-6 col-md-3"><a href="idex.html:" class="sitemap-header">Home</a>
                     <ul class="footer-sitemap-li">
-                        <li><a href="/index.html#bio">Bio</a></li>
-                        <li><a href="/index.html#testimonials">Testimonials</a></li>
+                        <li><a href="index.html#bio">Bio</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                     </ul>
                 </li>
                 <li class=" col-12 col-sm-6 col-md-3"><a href="/resume.html" class="sitemap-header">Resume</a>
                     <ul class="footer-sitemap-li">
-                        <li><a href="/resume/index.html#objective">Objective</a></li>
-                        <li><a href="/resume/index.html#skills-summary">Skills Summary</a></li>
-                        <li><a href="/resume/index.html#past-working-experience">Past Working Experience</a></li>
-                        <li><a href="/resume/index.html#education">Education</a></li>
-                        <li><a href="/resume/index.html#skills">Skills</a></li>
-                        <li><a href="/resume/index.html#certificates-and-projects">Certificates and Projects</a></li>
+                        <li><a href="resume.html#objective">Objective</a></li>
+                        <li><a href="resume.html#skills-summary">Skills Summary</a></li>
+                        <li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
+                        <li><a href="resume.html#education">Education</a></li>
+                        <li><a href="resume.html#skills">Skills</a></li>
+                        <li><a href="resume.html#certificates-and-projects">Certificates and Projects</a></li>
                     </ul>
                 </li>
                 <li class=" col-12 col-sm-6 col-md-3">
                     <a href="/portfolio.html" class="sitemap-header" font-weight-bold ">Portfolio</a>
                     <ul class="footer-sitemap-li ">
-                        <li><a href="/portfolio/index.html#project1 ">Project #1</a></li>
-                        <li><a href="/portfolio/index.html#project2 ">Project #2</a></li>
-                        <li><a href="/portfolio/index.html#project3 ">Project #3</a></li>
-                        <li><a href="/portfolio/index.html#project4 ">Project #4</a></li>
+                        <li><a href="/portfolio.html#project1 ">Project #1</a></li>
+                        <li><a href="/portfolio.html#project2 ">Project #2</a></li>
+                        <li><a href="/portfolio.html#project3 ">Project #3</a></li>
+                        <li><a href="/portfolio.html#project4 ">Project #4</a></li>
                     </ul>
                 </li>
-                <li class="col-12 col-sm-6 col-md-3 "><a href="/contact.html " class="sitemap-header ">Contact</a>
-                    <ul class="footer-sitemap-li ">
-                        <li><a href="/contact/index.html#contact-form ">Contact Form</a></li>
-                        <li><a href="/contact/index.html#contact-details ">Contact Details</a></li>
-                    </ul>
-                </li>
+
             </ul>
             &nbsp;
         </section>
