--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <header>
 
-    <nav class="navbar fix-top navbar-expand-md navbar-light xs-light">
+    <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light">
         <a class="navbar-brand" href="#"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
