Change footer color, add top margin for footer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!-- Home Page -->
-
 <!DOCTYPE html>
 <html lang="en">
+
+
+<!-- Home Page -->
 
 <head>
 
@@ -189,7 +190,7 @@
 					<div class="row">
 						<h1>Certificates and Projects</h1>
 					</div>
-					<div class-"row">
+					<div class="row">
 						<div class="col-1">
 							icon
 						</div>
@@ -340,7 +341,7 @@
 					</ul>
 				</li>
 				<li class=" col-12 col-sm-6 col-md-3">
-					<a href="/portfolio.html" class="sitemap-header" font-weight-bold ">Portfolio</a>
+					<a href="/portfolio.html" class="sitemap-header">Portfolio</a>
                     <ul class=" footer-sitemap-li ">
                         <li><a href="/portfolio.html#project1 ">Project #1</a></li>
                         <li><a href="/portfolio.html#project2 ">Project #2</a></li>
