--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home </a>
+                            <a class="nav-link" href="index.html">Home </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
