--- a/resume.html
+++ b/resume.html
@@ -48,8 +48,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Resume <span class="sr-only">(current)</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Resume <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
