--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 	<header>
         <section class="container">
             <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-                <a class="navbar-brand" href="#"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+                <a class="navbar-brand" href="index.html"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
@@ -325,26 +325,34 @@
 				<li class="col-12 col-sm-6 col-md-3"><a href="idex.html:" class="sitemap-header">Home</a>
 					<ul class="footer-sitemap-li">
 						<li><a href="index.html#bio">Bio</a></li>
+                        <li><a href="index.html#value-proposition">Value Proposition</a></li>
+                        <li><a href="index.html#interest">Interest</a></li>
 						<li><a href="index.html#testimonials">Testimonials</a></li>
+                        <li><a href="index.html#membership">Membership</a></li>
+                        <li><a href="index.html#personality-test">Personality Test</a></li>
 					</ul>
 				</li>
-				<li class=" col-12 col-sm-6 col-md-3"><a href="/resume.html" class="sitemap-header">Resume</a>
+				<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
 					<ul class="footer-sitemap-li">
 						<li><a href="resume.html#objective">Objective</a></li>
-						<li><a href="resume.html#skills-summary">Skills Summary</a></li>
+						<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
 						<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
 						<li><a href="resume.html#education">Education</a></li>
 						<li><a href="resume.html#skills">Skills</a></li>
-						<li><a href="resume.html#certificates-and-projects">Certificates and Projects</a></li>
+						<li><a href="resume.html#certificates">Certificates</a></li>
+                        <li><a href="resume.html#volunteering-experience">Volunteering Experience</a><li>
 					</ul>
 				</li>
 				<li class=" col-12 col-sm-6 col-md-3">
-					<a href="/portfolio.html" class="sitemap-header">Portfolio</a>
+					<a href="portfolio.html" class="sitemap-header">Portfolio</a>
                     <ul class=" footer-sitemap-li ">
-                        <li><a href="/portfolio.html#project1 ">Project #1</a></li>
-                        <li><a href="/portfolio.html#project2 ">Project #2</a></li>
-                        <li><a href="/portfolio.html#project3 ">Project #3</a></li>
-                        <li><a href="/portfolio.html#project4 ">Project #4</a></li>
+                        <li><a href="portfolio.html#project-1 ">Project #1</a></li>
+                        <li><a href="portfolio.html#project-2 ">Project #2</a></li>
+                        <li><a href="portfolio.html#project-3 ">Project #3</a></li>
+                        <li><a href="portfolio.html#project-4 ">Project #4</a></li>
+                    </ul>
+                    <ul class="sitemap-header">
+                        <li><a href="resume.html" class="download-resume">Portfolio</a></li>
                     </ul>
                 </li>
 
