--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Home Page -->
+<!-- Portfolio Page -->
 
 <head>
 
@@ -39,20 +39,20 @@
 	<header>
         <section class="container">
             <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-                <a class="navbar-brand" href="#"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+                <a class="navbar-brand" href="index.html"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home </a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
@@ -60,8 +60,6 @@
         </section>
 	</header>
 
-
-
-
-</body>
-</html>
+	<!--
+    Starts of main content area
+    -->
